--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,15 +1,17 @@
 .sidebar-section{
-    display: flex
+    display: flex;
+    background-color: black;
 }
 
 .sidebar{
     height: 100vh;
     background-color: #1e1e2c;
     width: 90px;
+    position: fixed;
 }
 
 .sidebar-toggle{
-    width: 230px;
+    width: 200px;
 }
 
 .sidebar-toggle-icons{
