--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -29,3 +29,14 @@
     text-align: justify;
     padding: 20px; 
 }
+
+/* Dark Mode */
+#dark .about{
+    box-shadow: none;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#dark .about-content h1{
+    color: #b0a4a4;
+    border-bottom: 2px solid #b0a4a4;
+}
