--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -48,3 +48,20 @@
     font-size: 20px;
     font-weight: 400;
 }
+
+.theme-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+    background-color: #1e1e1e;
+    margin-top: 20px;
+    text-align: center;
+    position: fixed;
+    right: 0;
+    cursor: pointer;
+    z-index: 1;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
