--- a/src/pages/Education/Education.css
+++ b/src/pages/Education/Education.css
@@ -15,3 +15,18 @@
     font-weight: bold;
     color: #138781;
 }
+
+@media (max-width: 600px) {
+    .education {
+        margin: 0;
+        padding: 0;
+        margin-top: 30px;
+    }
+    .education h2 {
+        padding-top: 20px;
+    }
+    .education hr{
+        width: 280px;
+        margin-bottom: 10px;
+    }
+}
