--- a/src/pages/Footer/Footer.css
+++ b/src/pages/Footer/Footer.css
@@ -1,3 +1,12 @@
 .footer{
     padding-bottom: 30px;
 }
+
+@media (max-width: 600px) {
+    .footer {
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
+}
