--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -65,3 +65,17 @@
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
+
+@media (max-width: 600px) {
+    .home-container {
+        margin: 0;
+        padding: 0;
+        margin-top: 50px;
+    }
+    .home-container h2 {
+        font-size: 24px;
+    }
+    .home-container h1 {
+        font-size: 24px;
+    }
+}
