--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -67,7 +67,7 @@ button:focus {
 }
 
 .button {
-    background-color: #1e1e2c;
+    background-color: #ff5361;
     color: white;
     border-radius: 2px;
     margin-top: 15px;
