--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,55 +1,48 @@
-.home-container{
+.home-container {
     height: 300px;
     color: white;
     padding-left: 150px;
-} 
+}
 
-.home-content h2{
+.home-content h2 {
     padding: 5px;
     padding-top: 70px;
 }
-
-.home-content h1{
-    padding: 5px;
+.home-content h1 {
     color: #e0b50f;
+    padding: 5px;
 }
 
-.home-buttons{
+.home-buttons {
+    position: relative;
     margin-top: 20px;
+    z-index: 1;
 }
 
-.home-buttons .btn-hire{
+.home-buttons .btn-hire {
     background-color: #3b8ff3;
     color: white;
-    width: 100px;
+    width: 160px;
 }
-
-.home-buttons .btn-hire:hover{
+.home-buttons .btn-hire:hover {
     background-color: white;
     color: #3b8ff3;
-    width: 120px;
-    transition: 600ms;
-    font-size: 20px;
-    font-weight: 400;
+    width: 200px;
+    transition: 1s;
 }
 
-.home-buttons .btn-cv{
+.home-buttons .btn-cv {
     background-color: #f29f67;
     color: white;
-    width: 100px;
-    margin-left: 20px;
+    margin-left: 15px;
 }
 
-.home-buttons .btn-cv:hover{
-    color: #f29f67;
-    background-color: white;
-    width: 120px;
-    transition: 600ms;
-    font-size: 20px;
-    font-weight: 400;
+.home-buttons .btn-cv:hover {
+    opacity: 80%;
+    transition: 1s;
 }
 
-.theme-btn{
+.theme-btn {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -61,21 +54,22 @@
     position: fixed;
     right: 0;
     cursor: pointer;
-    z-index: 1;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+    z-index: 1;
 }
 
+/* =============== */
 @media (max-width: 600px) {
     .home-container {
-        margin: 0;
-        padding: 0;
-        margin-top: 50px;
+    padding: 0;
+    margin: 0;
+    margin-top: 50px;
     }
     .home-container h2 {
-        font-size: 24px;
+    font-size: 24px;
     }
     .home-container h1 {
-        font-size: 24px;
+    font-size: 24px;
     }
 }
