--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -24,6 +24,8 @@
     background-color: #f29f67;
     color: white;
     margin-top: 30px;
+    position: relative;
+    z-index: 1;
 }
 
 @media (max-width:600px){
