--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,35 +1,32 @@
-.sidebar-section{
+.sidebar-section {
     display: flex;
-    background-color: black;
+    position: relative;
 }
 
-.sidebar{
+.sidebar {
     height: 100vh;
     background-color: #1e1e2c;
     width: 90px;
     position: fixed;
+    z-index: 3;
 }
 
-.sidebar-toggle{
+.sidebar-toggle {
     width: 200px;
+    z-index: 3; 
 }
 
-.sidebar-toggle-icons{
+.sidebar-toggle-icons {
     display: flex;
     align-items: right;
     justify-content: right;
     cursor: pointer;
 }
-.sidebar-toggle-icons p svg{
+
+.sidebar-toggle-icons p svg {
     background-color: #f29f67;
     color: white;
     margin-top: 30px;
-    position: relative;
-    z-index: 1;
-}
-
-@media (max-width:600px){
-    .sidebar {
-        display: none;
-    }
+    position: absolute;
+    z-index: 5; /* On top of sidebar for interaction */
 }
