--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,55 +1,60 @@
-.about{
-    margin: 30px 0px;
+.about {
+    margin: 30px 0;
     padding: 20px;
-    margin-left: 200px;
+    margin-left: 150px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    transition: background-color 0.3s, box-shadow 0.3s;
 }
 
-.about-image img{
+.about-image img {
+    margin-top: 100px;
     height: 400px;
     width: 80%;
     margin-left: 40px;
 }
 
-.about-content{
+.about-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.about-content h1{
+.about-content h1 {
     color: gray;
     font-family: cursive;
     border-bottom: 2px solid black;
     text-align: center;
 }
 
-.about-content p{
+.about-content p {
     text-align: justify;
     padding: 20px; 
 }
 
-/* Dark Mode */
-#dark .about{
+#dark .about {
     box-shadow: none;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(30, 30, 30, 0.9);
+    color: white;
 }
 
-#dark .about-content h1{
-    color: #b0a4a4;
-    border-bottom: 2px solid #b0a4a4;
+#dark .about-content h1 {
+    color: #e0e0e0;
+    border-bottom: 2px solid #BB86FC;
 }
 
+#dark .about-content p {
+    color: #d3d3d3;
+}
 
 @media (max-width: 600px) {
     .about {
-    margin: 0;
-    padding: 0;
-    margin-top: 20px;
-    width: 100%;
+        margin: 0;
+        padding: 20px;
+        width: 100%;
     }
+    
     .about-content h1 {
-    margin-top: 15px;
+        margin-top: 15px;
     }
 }
