--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,48 +1,49 @@
+.container {
+    z-index: 1;
+}
+
 .home-container {
     height: 300px;
-    color: white;
     padding-left: 150px;
+    z-index: 4;
+}
+
+.home-content {
+    z-index: 6;
+    position: relative;
 }
 
 .home-content h2 {
     padding: 5px;
     padding-top: 70px;
 }
+
 .home-content h1 {
-    color: #e0b50f;
+    color: #00a3a4; /* Green for light mode */
     padding: 5px;
 }
 
 .home-buttons {
-    position: relative;
+    position: absolute;
     margin-top: 20px;
-    z-index: 1;
-}
-
-.home-buttons .btn-hire {
-    background-color: #3b8ff3;
-    color: white;
-    width: 160px;
-}
-.home-buttons .btn-hire:hover {
-    background-color: white;
-    color: #3b8ff3;
-    width: 200px;
-    transition: 1s;
+    z-index: 6; 
 }
 
 .home-buttons .btn-cv {
-    background-color: #f29f67;
+    background-color: #007bff;
     color: white;
     margin-left: 15px;
 }
 
 .home-buttons .btn-cv:hover {
-    opacity: 80%;
+    background-color: aquamarine;
+    color: #3b8ff3;
+    width: 130px;
     transition: 1s;
 }
 
 .theme-btn {
+    color: wheat;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,20 +57,42 @@
     cursor: pointer;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    z-index: 1;
+    z-index: 4;
 }
 
-/* =============== */
 @media (max-width: 600px) {
+    .sidebar {
+        display: none;
+    }
+
     .home-container {
-    padding: 0;
-    margin: 0;
-    margin-top: 50px;
+        padding: 0;
+        margin: 0;
+        margin-top: 50px;
     }
+
     .home-container h2 {
-    font-size: 24px;
+        font-size: 24px;
     }
+
     .home-container h1 {
-    font-size: 24px;
+        font-size: 24px;
     }
+}
+
+#dark .home-content h1 {
+    color: #BB86FC; /* Purple for dark mode */
+}
+
+#dark .home-buttons .btn-cv {
+    background-color: rgba(0, 123, 255, 0.8);
+    color: white;
+}
+
+#dark .home-buttons .btn-cv:hover {
+    background-color: rgba(0, 255, 255, 0.8);
+}
+
+#dark .theme-btn {
+    background-color: #2c2c2c;
 }
