--- a/src/pages/Tech Stack/TechStack.css
+++ b/src/pages/Tech Stack/TechStack.css
@@ -1,41 +1,69 @@
+.tech-card {
+    width: 30%;
+}
+
 .techstack {
-    padding-left: 130px;
+    padding-left: 150px;
     margin-top: 60px;
 }
+
 .techstack hr {
     color: #138781;
     width: 400px;
     margin: 10px auto;
 }
+
 .techstack h2 {
     font-weight: bold;
     color: #138781;
 }
+
 .techstack .card {
     cursor: pointer;
+    transition: transform 0.3s, box-shadow 0.3s;
 }
+
 .techstack .tech-icon {
     font-size: 2rem;
     margin-right: 10px;
 }
+
 .techstack .card:hover {
+    transform: scale(1.05);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+                rgba(0, 0, 0, 0.12) 0px -12px 30px,
+                rgba(0, 0, 0, 0.12) 0px 4px 6px,
+                rgba(0, 0, 0, 0.17) 0px 12px 13px,
+                rgba(0, 0, 0, 0.09) 0px -3px 5px;
     background-color: #138781;
     color: white;
-
-    transition: 1s;
 }
 
 @media (max-width: 600px) {
     .techstack {
-    margin: 0;
-    padding: 0;
-    margin-top: 50px;
-    width: 100%;
+        margin: 0;
+        padding: 0;
+        margin-top: 50px;
+        width: 100%;
     }
+    
     .techstack hr {
-    width: 280px;
+        width: 280px;
     }
+}
+
+/* Dark Mode */
+#dark .techstack h2,
+#dark .techstack hr {
+    color: #BB86FC; 
+}
+
+#dark .techstack .card {
+    background-color: rgba(255, 255, 255, 0.1); 
+    color: #E0E0E0; 
+}
+
+#dark .techstack .card:hover {
+    background-color: #1E1E2C; 
+    color: #BB86FC; 
 }
