--- a/src/components/MobileNav/MobileNav.css
+++ b/src/components/MobileNav/MobileNav.css
@@ -11,6 +11,8 @@
   width: 100%;
   background-color: #1e1e1e;
   padding: 8px;
+  display: flex;
+  align-items: center;
 }
 
 .mobile-nav-header .mobile-nav-icon {
@@ -36,8 +38,46 @@
   border-bottom-right-radius: 10px;
 }
 
+.mobile-nav-menu .nav-items .nav-item {
+  margin: 15px 0;
+  color: #f4eee0;
+  transition: color 0.3s ease-in-out;
+}
+
+.mobile-nav-menu .nav-items .nav-link {
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.mobile-nav-menu .nav-items .nav-link:hover {
+  background-color: rgba(247, 174, 34, 0.1);
+}
+
+#dark .mobile-nav-header {
+  background-color: #1a1a1a;
+}
+
+#dark .mobile-nav-title {
+  color: #f4eee0;
+}
+
+#dark .mobile-nav-menu .nav-items {
+  background-color: #1a1a1a;
+}
+
+#dark .mobile-nav-menu .nav-items .nav-item {
+  color: #f4eee0;
+}
+
+#dark .mobile-nav-menu .nav-items .nav-link:hover {
+  background-color: rgba(247, 174, 34, 0.1);
+}
+
 @media (min-width: 600px) {
   .mobile-nav {
-    display: none;
+      display: none;
   }
 }
