--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -12,12 +12,12 @@
     color: #333;
 }
 
-.project h2 {
+.project h1 {
+    padding-top: 20px;
     font-weight: 700;
     color: #00a3a4;
     text-transform: uppercase;
     margin-bottom: 20px;
-    font-size: 24px;
 }
 
 .project hr {
@@ -150,7 +150,7 @@
     color: #E0E0E0;
 }
 
-#dark .project h2 {
+#dark .project h1 {
     color: #BB86FC;
 }
 
